fix: fix alignment issues

--- a/styles/pricing.css
+++ b/styles/pricing.css
@@ -104,10 +104,6 @@
       margin-inline: auto;
     }
 
-    & .cards{
-      align-items: center;
-    }
-
     & .premium .card {
       padding-bottom: 6rem;
     }
@@ -115,6 +111,10 @@
     .btn-md {
       padding: 0.75rem 1.5rem;
       font-size: var(--fs-base);
+    }
+
+    & .align zin-pricing{
+      margin-top: 1.5rem;
     }
 
     & .card:nth-child(3) .separator {
